# producer-consumer-problem-c-OS-assignment

./: CMakeLists.txt  README.md
Assignment/: Makefile  file_reader.c  file_reader.h  mssv.c  mssv.h  sudoku_setup.c  sudoku_setup.h  sudoku_solution_file_reader.c  sudoku_solution_file_reader.h  sudoku_validator.c  sudoku_validator.h  thread_functions.c  thread_functions.h  thread_mgmt.c  thread_mgmt.h  utilities.c  utilities.h  utility.c  utility.h
Assignment/Solutions/: solution1  solution3  solution4
docs/: Brief.md  Checklist.md  Report.md
